feat: Rename project to "may be final"
Updates package name and metadata to reflect the new project name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-magical-birthday-surprise",
+  "name": "may-be-final",
   "private": true,
   "version": "0.0.0",
   "type": "module",
